# truesignal

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  no-internal-docs.yml
benchmarks/: README.md  cold-start.ts  feed-latency.ts  setup-time.ts
docs/: concepts.md  getting-started.md
docs/integrations/: ci.md
python/: README.md  pyproject.toml
python/examples/: README.md
python/examples/01-init-and-feed/: run.py
python/examples/02-ci-gate/: gate.py
python/examples/03-agent-native-json/: agent_report.py
python/src/truesignal/: __init__.py  _util.py  cli.py  cli_helpers.py  http.py  types.py
python/src/truesignal/connectors/: __init__.py  cisa_kev.py  cloudflare_radar.py  gdelt.py  reddit.py  telegram.py
python/src/truesignal/provenance/: __init__.py  cache.py  stamp.py
python/tests/: conftest.py  test_cache.py  test_cli.py  test_cli_helpers.py  test_connectors_cisa_kev.py  test_connectors_cloudflare_radar.py  test_connectors_gdelt.py  test_connectors_reddit.py  test_connectors_telegram.py  test_no_fabrication.py  test_stamp.py
src/truesignal/: cli-helpers.test.ts  cli-helpers.ts  cli.ts  index.ts  types.ts
src/truesignal/connectors/: cisa-kev.test.ts  cisa-kev.ts  cloudflare-radar.test.ts  cloudflare-radar.ts  gdelt.test.ts  gdelt.ts  index.ts  reddit.test.ts  reddit.ts  telegram.test.ts  telegram.ts
src/truesignal/provenance/: cache.test.ts  cache.ts  index.ts  no-fabrication.test.ts  stamp.test.ts  stamp.ts
