[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truesignal"
version = "0.1.0"
description = "Provenance-first OSINT/security intelligence feed CLI. Every item ships a real source URL, a real timestamp, and an explicit live/fallback flag -- never a fabricated or silently-replayed data point."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Rudrendu Paul" },
  { name = "Sourav Nandy" },
]
keywords = ["osint", "security", "threat-intelligence", "cisa-kev", "cve", "cli", "provenance", "cloudflare-radar", "gdelt"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Internet",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9",
  "build>=1.0,<2",
  "twine>=5.0,<7",
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/truesignal"
Repository = "https://github.com/RudrenduPaul/truesignal"
"Bug Tracker" = "https://github.com/RudrenduPaul/truesignal/issues"
Changelog = "https://github.com/RudrenduPaul/truesignal/blob/main/CHANGELOG.md"
Documentation = "https://github.com/RudrenduPaul/truesignal/blob/main/docs/getting-started.md"
"Author - Rudrendu Paul" = "https://github.com/RudrenduPaul"
"Author - Sourav Nandy" = "https://github.com/Sourav-nandy-ai"

[project.scripts]
truesignal = "truesignal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/truesignal"]

[tool.hatch.build.targets.sdist]
include = [
  "src/truesignal",
  "tests",
  "README.md",
  "LICENSE",
]
exclude = [
  "examples",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
